# xyz_agent

./: .gitignore  README.md  pyproject.toml
config/: settings.example.json  settings.live.example.json
deploy/systemd/: trade-xyz-monitor.env.example  trade-xyz-monitor.service
docs/: DEPLOYMENT.md  PROJECT_STRUCTURE.md  TEST_PLAN.md
scripts/: agent  analyze  analyze-xyz  analyze-xyz-stocks  check  monitor  monitor-xyz  test  trade
src/listing_agent/: __init__.py  audit.py  cli.py  config.py  execution.py  hyperliquid_client.py  listing_analysis.py  main.py  metadata.py  models.py  risk.py  timeutil.py  validator.py
src/listing_agent/monitor/: __init__.py  alert_service.py  all_mids_watcher.py  client.py  metadata_watcher.py  models.py  runner.py  scoring.py  state_machine.py  storage.py  verifier.py
tests/: test_listing_analysis.py  test_metadata.py  test_monitor.py  test_risk_execution.py
